--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
           <p>최고 점수</p>
           <p id="bestScore">0</p>
         </div>
-        <button>새 게임</button>
+        <button id="regame">새 게임</button>
       </div>
     </div>
     <div class="container" style="position: relative">
